# VeOmni

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  build.sh  ci.sh  design.md  exp.sh  exp_qwen3vlmoe.sh  graph.fsm.mmd  graph.mmd  janus.fsm.mmd  janus.mmd  new_qwen3.sh  new_qwen3vlmoe.sh  new_qwen3vlmoe_rl.sh  prd.json  progress.txt  pyproject.toml  qwen3.sh  qwen3vlmoe.sh  test.py  test_gen.sh  test_train.sh  test_und.sh  train.sh
.agents/: setup_agent.sh
.agents/knowledge/: architecture.md  constraints.md  multimodal_metadata.md  uv.md
.agents/skills/: README.md  veomni-bugfix.md  veomni-feature.md  veomni-refactor.md
.cursor/rules/: skills-reusable-only.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ascend-npu.yml
.github/workflows/: README.md  _test_runner_gpu.yml  _test_runner_npu.yml  add_ascend_label_on_comment.yml  add_ascend_label_on_creation.yml  auto_label_issue_and_pr.yml  check_copyright.yml  check_patchgen.yml  check_pr_lint.yml  check_pr_title.yml  device_api_check.yml  docker-build-ascend-a2-double.yml  docker-build-ascend-a2.yml  docker-build-ascend-a3.yml  gpu_e2e_test.yml  gpu_unit_tests.yml  issue_labeler.yml  npu_e2e_test.yml  npu_unit_tests.yml  pre-commit.yml  publish.yml  static_checks.yml
archive/2026-03-02-fix-skipped-tests/: prd.json  progress.txt
archive/2026-03-02-youmu-libero-e2e/: progress.txt
configs/deepspec/: README.md  dspark_qwen3_4b.yaml  eagle3_qwen3_4b.yaml
configs/dit/: flux_lora.yaml  flux_sft.yaml  ltx2_av_lora.yaml  ltx2_av_lora_low_vram.yaml  ltx2_v2v_ic_lora.yaml  qwen_image_sft.yaml  wan2.1_I2V_1.3B_lora.yaml  wan2.2_TI2V_5B_lora.yaml  wan2.2_TI2V_5B_sft.yaml  wan_lora.yaml  wan_sft.yaml
configs/dit_new/: wan_lora.yaml
configs/pretrain/: deepseek.yaml  qwen2_5.yaml  qwen3-moe.yaml  seed_dense.yaml  seed_oss.yaml
configs/seed_omni/: janus_1.3b.yaml  veomni_janus.yaml
configs/sft/: deepseek_sft.yaml  qwen3_5_sft.yaml  qwen3_classification.yaml  qwen3_sft.yaml
configs/text/: deepseek.yaml  deepseek_v4.yaml  deepseek_v4_npu.yaml  gemma3.yaml  gpt_oss_120b_lora_ep4.yaml  llama3.yaml  qwen2_5.yaml  qwen3-moe.yaml  qwen3.yaml  qwen3_5.yaml  qwen3_5_sft.yaml  qwen3_5_sp2.yaml  qwen3_5_sp_test_dp4_sp1.yaml  qwen3_5_sp_test_dp4_sp2.yaml  qwen3_dpo.yaml  qwen3_moe_lora.yaml  qwen3_moe_lora_v4.yaml  qwen3_moe_lora_v5.yaml  qwen3_moe_muon.yaml  seed_oss.yaml
docker/: Dockerfile  README.md  build.sh  flex_smoke.py  generate.py  gpu.Dockerfile  matrix.yaml  nccl_smoke.py  qwen3_06b_dolci_sft_10step.yaml  qwen3_06b_flex_smoke.yaml  qwen3_06b_smoke.yaml  requirements-a100-cu126.txt  run.sh  smoke_test.py
docker/ascend/: Dockerfile.ascend_8.3.rc2_a2  Dockerfile.ascend_8.3.rc2_a2.x86  Dockerfile.ascend_9.0.0_a2.arm  Dockerfile.ascend_9.0.0_a2.x86  Dockerfile.ascend_9.0.0_a3
docker/cuda/: Dockerfile.cu128  Dockerfile.cu129  Dockerfile.cu130
docker/templates/: ascend.Dockerfile.j2  cuda.Dockerfile.j2
docs/: Makefile  conf.py  index.md  index.rst  requirements-docs.txt  requirements.txt  testing.md
docs/ascend_tutorials/: ascend_quick_start.md  ascend_quick_start_en.md
docs/design/: deepspec_draft_integration.md  kernel_selection.md  patchgen.md  seed_omni_v2.md  unified_kernel_registry.md  verl_topk_distill_integration.md
docs/examples/: generate_wan_dataset.py  ltx-2.3.md  minimax_m3_vl.md  qwen2vl.rst  qwen3.md  qwen3_5.md  qwen3_dpo.md  qwen3_moe.md  qwen3_omni_decoupled_av.md  qwen3_omni_moe.md  qwen3_omni_offline_av.md  qwen3_vl.md  qwen3vl_moe.md  wan2.1.md  wan2.1_I2V_1.3B.md  wan2.2_TI2V_5B.md
docs/hardware_support/: FAQ.md  a5_unsupported_features.md  ascend_environment_variables.rst  get_started_npu.md  precision_analysis.md  profiling_analysis.md  typical_usage.md
docs/key_features/: async_activate_offload.md  deepseek_v3_mtp.md  ep_fsdp2.md  extra_parallel.md  lora.md  model_loader.md  preprocessor_registry.md  ulysses.md  ulysses_ws_push.md
docs/seed_omni/: data_format.md  design.md  omni_v2_refactor_migration.md  seed_omni_v2.md
docs/start/: ascend_start_en.md  best_practice.md  quick_start.md  start.rst
docs/transformers_v5/: index.md  liger_kernel_hub_integration.md  moe_experts_registration.md  moe_weight_format_migration_plan.md  patchgen.md  testing_new_model.md  transformers_v5_moe_weight_loading.md  veomni_flash_attention_kernel_adapter.md  veomni_fused_attention.md
docs/tutorials/: custom_dataset_registry.md  enable_new_models.md  preprocessor_registry.md  tensorboard_and_wandb.md
docs/usage/: agent_workflow.md  arguments.md  basic_modules.md  byted_loader.md  data_packing_and_dyn_bsz.md  hdfs_fuse_patch.md  multimodal_data_processing.md  rmpad_with_pos_ids_and_dyn_bsz.md  seedomni_data_format.md  support_new_models.md  trainer.md
graphs/: janus_interleave.fsm.mmd  janus_interleave.mmd  janus_t2i.fsm.mmd  janus_t2i.mmd  janus_understanding.fsm.mmd  janus_understanding.mmd
graphs/bagel_7b_mot_base/: infer_edit.mmd  infer_gen.mmd  infer_interleave.mmd  infer_und.mmd  training.mmd
graphs/janus_1.3b_base/: infer_gen.mmd  infer_interleave.mmd  infer_und.mmd  training.mmd
graphs/qwen3_0.6b_base/: infer_text.mmd  training.mmd
patchgen-pkg/: build.sh
preprocessing/: json_to_webdataset.py
scripts/: add_copyright.py  benchmark_gram_ns.py  check_copyright.py  convert_model.py  convert_parquet_page_size.py  download_hf_data.py  download_hf_model.py  merge_dcp_to_hf.py  prepare_ultrafeedback.py  qkv_split_dcp_to_hf.py  split_janus.py  trim_safetensor_layers.py  visualize_omni_graph.py
scripts/deepseek_v3/: kernel.py  (+1 more)
tasks/: data_sim.py  infer.py  infer_diffusion.py  prd-enforce-rust-backend.md  prd-fix-skipped-tests.md  prd-youmu-libero-e2e-training.md  text_trainer.py  train_deepspec_draft.py  train_diffusion.py  train_omni.py  train_qwen3_vl_moe_dummy.py  train_text.py  train_text_dpo.py  train_text_rl.py  train_torch.py  train_vlm.py  train_vlm_rl.py
tests/: conftest.py  test_tensorboard_callback.py
tmp_scripts/: test_dit.py  test_infer.py
veomni/: __init__.py  _version.py  patchgen.py
(+1461 files in other folders)
