[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/ByteDance-Seed/VeOmni"
"Source Code" = "https://github.com/ByteDance-Seed/VeOmni"

[project]
name = "veomni"
dynamic = ["version"]
description = "VeOmni: Scaling any Modality Model Training to any Accelerators with PyTorch native Training Framework"
readme = "README.md"
requires-python = ">=3.11, <3.13"
license = { file = "LICENSE" }
authors = [
  { name="ByteDance-Seed", email="doubao-llm@bytedance.com" },
]

dependencies = [
  "blobfile>=3.0.0",
  "datasets>=2.20.0,<=2.21.0",
  "packaging>=23.0,<26.0",
  "torchdata>=0.8.0,<1.0",
  "tiktoken>=0.9.0",
  # Comment out transformers version so pip users do not accidentally pull in a
  # version that conflicts with the uv-managed setup.
  # For uv user: the actual version is pinned by the "transformers-stable"
  # default dependency-group (==5.9.0).
  # For pip user: please install 5.9.0 manually via `pip install transformers==5.9.0`.
  # "transformers==5.9.0",
  "psutil",
  "timm",
  "wandb",
  "setuptools",
  "einops>=0.8.1",
  # matplotlib is used by veomni.utils.moe_monitor to render the per-step
  # MoE expert-load heatmap that gets logged to wandb. Falls back to scalar
  # metrics only if matplotlib is missing.
  "matplotlib>=3.7",
]

[project.optional-dependencies]
# Hardware-shaped extras. The whole project funnels into three mutually-exclusive
# extras (declared in `[tool.uv].conflicts` below) so that a typical install is
# `uv sync --extra <gpu|npu|npu_aarch64>` — one flag, no à la carte feature
# extras to remember. Earlier revisions split the Python-level deps (audio,
# video, dit, trl, lora, fa3, fa4, flash-qla, megatron) into nine separate
# extras, which forced docker / CI / docs to chain seven-plus `--extra` flags
# and made the `pip install veomni[<???>]` UX a maze. Those splits are gone:
# everything that's CUDA-safe lives in `gpu`, everything that's NPU-safe lives
# in `npu`, and the aarch64 NPU build stays minimal (the aarch64 wheel set for
# av / torchcodec is incomplete on PyPI as of 2026-06).
#
# Trade-off: a fresh `uv sync --extra gpu` source-builds flash-attn (FA2),
# flash-attn-3, flash-attn-4, and flash-qla — collectively ~60–90 min the
# first time. uv caches the built wheels under ~/.cache/uv, so subsequent
# syncs (and CI runners with a populated cache) are fast. The cuda docker
# image bakes the cache into the layer.
#
# The `dev` extra below is the legacy pip-style entry point; modern uv users
# should pull dev tooling via the `dev` dependency-group (`uv sync --dev`) —
# see `[dependency-groups]` further down.
dev = [
  "pre-commit>=4.0.0,<5.0",
  "ruff>=0.7.0,<1.0",
  "pytest>=6.0.0,<8.0",
  "expecttest>=0.3.0,<0.4"
]

# NVIDIA GPU on x86_64 — full superset.
#
# Toolchain: targets the cu130 docker image (NGC PyTorch 25.11 base; CUDA
# 13.0.2 + cuDNN 9.x). Pinned to torch 2.11 — the latest stable +cu130 wheel
# on download.pytorch.org. NGC 25.11 ships torch 2.10.0a0; uv overrides it
# with 2.11.0+cu130 at sync time.
#
# Source builds (all gated by `no-build-isolation-package` below so the build
# picks up the locked torch ABI):
#   - flash-attn 2.8.3        — PyPI sdist (no Luosuu prebuilt cu130+torch2.11
#                                wheel exists as of 2026-06).
#   - flash-attn-3            — Dao-AILab/flash-attention/hopper (Hopper sm_90;
#                                used by Wan / Flux DiT paths).
#   - flash-attn-4            — Dao-AILab/flash-attention/flash_attn/cute
#                                (Blackwell + cute kernels).
#   - flash-qla               — QwenLM/FlashQLA (alt chunk_gated_delta_rule
#                                kernel for Qwen3.5 linear attention; default
#                                `eager` / `fla` paths work without it).
gpu = [
  # cu130 torch stack
  "torch==2.11.0+cu130",
  "torchvision==0.26.0+cu130",
  "torchaudio==2.11.0+cu130",
  "torchcodec==0.12.0", # 0.12.x is compatible with torch 2.11
  # NVIDIA libraries
  "nvidia-cusparselt-cu13",
  "nvidia-nccl-cu13",
  "nvidia-cutlass-dsl>=4.4.2", # for flash-attn-4 cute kernels
  "cuda-python==13.0.3",
  # Attention kernels (source-built — see header note)
  "flash-attn",
  "flash-attn-3",
  "flash-attn-4",
  "flash-qla",
  # Linear-attention / loss / DLPack kernels
  "liger-kernel",
  "flash-linear-attention", # FLA backend for Qwen3.5 chunk_gated_delta_rule
  "quack-kernels[cu13]==0.5.0",
  "torch-c-dlpack-ext",
  # Audio / video data loading
  "av>=14.3.0,<15.0; python_version == '3.11'",
  "av>=14.0.0,<14.3; python_version == '3.12'",
  "librosa>=0.11.0,<0.12",
  "soundfile>=0.13.1,<0.14",
  # Diffusion / RLHF / LoRA
  "diffusers==0.37.0",
  "ftfy",
  "trl<=0.9.6",
  "peft==0.18.1",
  # Misc runtime
  "hf_transfer",
]

# Ascend NPU on x86_64 — full superset, minus CUDA-only kernels.
#
# Pinned to torch 2.7.1 + torch-npu 2.7.1 (CANN 8.3.rc2 / 9.0.0). The +cpu
# torch wheels bring the standard PyTorch package without a CUDA stack;
# torch-npu provides the Ascend backend. flash-attn / flash-attn-3 /
# flash-attn-4 / flash-qla are intentionally absent — they are CUDA-only.
npu = [
  "torch==2.7.1+cpu",
  "torch-npu==2.7.1",
  "torchvision==0.22.1+cpu",
  "torchaudio==2.7.1+cpu",
  "torchcodec>=0.4.0,<0.6.0",
  "decorator>=5.2.1",
  "scipy>=1.16.2",
  # Audio / video data loading (av wheel pulled from files.pythonhosted.org;
  # x86_64 only — see `[tool.uv.sources].av`).
  "av>=14.3.0,<15.0; python_version == '3.11'",
  "av>=14.0.0,<14.3; python_version == '3.12'",
  "librosa>=0.11.0,<0.12",
  "soundfile>=0.13.1,<0.14",
  # Diffusion / RLHF / LoRA
  "diffusers==0.37.0",
  "ftfy",
  "trl<=0.9.6",
  "peft==0.18.1",
  # Misc runtime
  "hf_transfer",
]

# Ascend NPU on aarch64 — minimal.
#
# av / torchcodec / soundfile / librosa do not all publish aarch64 manylinux
# wheels (the URL-pinned av wheel under `[tool.uv.sources]` is x86_64 only),
# so the aarch64 NPU build deliberately ships only the torch + torch-npu
# core. Users training DiT / running audio pipelines on arm64 NPU need to
# `pip install diffusers librosa soundfile ...` separately.
npu_aarch64 = [
  "torch==2.7.1",
  "torch-npu==2.7.1",
  "torchvision==0.22.1",
  "torchaudio==2.7.1",
  "decorator>=5.2.1",
  "scipy>=1.16.2",
]

[dependency-groups]
# Follow the best practice in https://docs.astral.sh/uv/concepts/projects/dependencies/#development-dependencies
# to manage dev dependencies (i.e., dependencies that are only used in development) like
# test, lint and doc tools.
dev = [
  {include-group = "lint"},
  {include-group = "test"},
  {include-group = "patchgen"},
]
lint = [
  "pre-commit",
  "ruff",
]
test = [
  "rich",
  "pytest",
  "expecttest",
]
# AST-based patchgen library. Build-time tool for regenerating modeling
# patches under veomni/models/transformers/*/generated/; not imported on
# the runtime path. Lives as a sibling project under ./patchgen-pkg/ for
# monorepo dev; `[tool.uv.sources].patchgen` points uv at the path.
# (Outer dir is ``patchgen-pkg`` rather than ``patchgen`` because Python's
# namespace-package finder would otherwise treat the sibling dir as
# ``import patchgen`` and shadow the editable install when cwd is the
# VeOmni repo root.) When patchgen lands on PyPI / a byted SCM mirror,
# move this entry to [project.optional-dependencies].dev so pip users can
# install it via `pip install veomni[dev]`.
patchgen = [
  "patchgen>=0.1.0",
]
# Pin the default transformers version via a dependency group. This is a
# default group (see default-groups below), so `uv sync` always installs
# transformers==5.9.0.
#
# Why a dependency group instead of `[project.dependencies]`? It keeps the
# transformers version out of the wheel metadata so pip users are not forced
# into a specific 5.x patch release.
transformers-stable = [
  "transformers==5.9.0"
]

[tool.uv]
# Accept a range of uv versions rather than an exact pin. Supported range:
# 0.9.8 through 0.11.x; developers are encouraged to stay reasonably current
# within it. An exact pin goes stale almost immediately (uv ships weekly —
# 0.11.17 landed days after we pinned 0.11.16) and needlessly blocks local
# devs whose uv differs by a patch release. This window will be tightened
# again later.
#
# Reproducibility is preserved because CI and the docker/ images install a
# concrete, in-range uv (currently 0.11.16) and never re-resolve the lockfile
# (docker: `uv sync --locked`; CI: `uv run --frozen`). Those concrete uv pins
# — the docker/ Dockerfiles and .github/workflows/check_patchgen.yml — must
# stay inside this range.
required-version = ">=0.9.8,<0.12"
no-build-isolation-package = [
    "flash-attn",
    "flash-attn-3",
]

# The "transformers-stable" dependency group is synced by default, ensuring
# that `uv sync` (with no extra flags) installs transformers==5.9.0.
default-groups = ["transformers-stable"]

override-dependencies = [
    # Adding the (extra == 'gpu') mark to declare this override is only for gpu extra.
    # Without this mark, uv would download torch/torchaudio/torchvision unexpectedly from
    # PyPI without using the cu130 versions.
    # Ref: https://github.com/astral-sh/uv/issues/11153
    "torch==2.11.0+cu130; (extra == 'gpu')",
    "torchaudio==2.11.0+cu130; (extra == 'gpu')",
    "torchvision==0.26.0+cu130; (extra == 'gpu')",
    "torchcodec==0.12.0; (extra == 'gpu')",
    # Adding explicit override for NPU backends - aarch64 variant
    "torch==2.7.1; (extra == 'npu_aarch64')",
    "torchaudio==2.7.1; (extra == 'npu_aarch64')",
    "torchvision==0.22.1; (extra == 'npu_aarch64')",
    "torchcodec>=0.4.0,<0.6.0; (extra == 'npu_aarch64')",
    # Adding explicit override for NPU backends - x86 variant (default npu)
    "torch==2.7.1+cpu; (extra == 'npu')",
    "torchaudio==2.7.1+cpu; (extra == 'npu')",
    "torchvision==0.22.1+cpu; (extra == 'npu')",
    "torchcodec>=0.4.0,<0.6.0; (extra == 'npu')",
]

conflicts = [
  [
    { extra = "gpu" },
    { extra = "npu" },
    { extra = "npu_aarch64" },
  ],
]

[tool.uv.sources]
# Sibling patchgen project under ./patchgen-pkg — once published, drop
# this entry and uv resolves the version pin from the registry instead.
patchgen = { path = "patchgen-pkg", editable = true }
# To support override-dependencies for multiple extras, one package can only have one index.
# Using pytorch index for all variants since it has both regular and +cpu versions
torch = [
  { index = "pytorch", marker = "(extra == 'npu' or extra == 'npu_aarch64')" },
  # Due to some unknown bugs, uv might resolve to a wheel from https://download.pytorch.org/whl/cu128_full which does
  # not include the proper dependencies on nvidia packages like nvidia-cublas and nvidia-nccl. This confuses uv to uninstall
  # those nvidia packages.
  #
  # By forcing it to the proper package here, we avoid the problem that uv could randomly resolve to other packages.
  #
  # NOTE: WHEN UPDATE TORCH VERSIONS, PLEASE UPDATE THIS TO THE CORRESPONDING WHEEL URL.
  { url = "https://download.pytorch.org/whl/cu130/torch-2.11.0%2Bcu130-cp311-cp311-manylinux_2_28_x86_64.whl", extra = 'gpu', marker = "python_version == '3.11'" },
  { url = "https://download.pytorch.org/whl/cu130/torch-2.11.0%2Bcu130-cp312-cp312-manylinux_2_28_x86_64.whl", extra = 'gpu', marker = "python_version == '3.12'" },
]
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
# flash-attn (FA2) is intentionally NOT pinned to a prebuilt wheel here:
# upstream Dao-AILab does not publish +cu130 wheels for the 2.8.x line, and
# Luosuu's `fa2cu130` release only covers torch 2.9 / 2.10 — there is no
# cu130+torch2.11 prebuilt wheel as of 2026-06. Instead, uv resolves the
# `flash-attn` registry entry on PyPI (`flash_attn-2.8.3.tar.gz` sdist) and
# source-builds it against the locked torch via `no-build-isolation-package`
# above. This adds ~15-30 min to the docker build the first time but is
# guaranteed to match torch's ABI; re-add a `[tool.uv.sources].flash-attn`
# entry pointing at a Luosuu (or upstream) cu130+torch2.11 wheel here when
# one ships.
# FlashAttention 3 (Hopper sm_90) and FlashAttention 4 (Blackwell, etc.) are
# both developed in Dao-AILab/flash-attention as standalone python projects.
# FA3 lives under hopper/ (PACKAGE_NAME = flash_attn_3 in setup.py); FA4 lives
# under flash_attn/cute/. Both pinned to the same 03/18/2026 commit so they
# stay coherent. Source builds are slow (~30 min each); both ride along inside
# the `gpu` extra so `uv sync --extra gpu` produces a complete training image.
# uv caches the built wheels under ~/.cache/uv, so subsequent syncs are fast.
flash-attn-3 = { git = "https://github.com/Dao-AILab/flash-attention", subdirectory = "hopper", rev = "9397816f6094f5ba0de52c221093637054590d0d" }
flash-attn-4 = { git = "https://github.com/Dao-AILab/flash-attention", subdirectory = "flash_attn/cute", rev = "9397816f6094f5ba0de52c221093637054590d0d" }
# FlashQLA — alternative chunk_gated_delta_rule implementation for Qwen3.5 linear attention.
# Pinned to 05/08/2026 main HEAD (PR #13 "preserve input dtype in l2norm helper"). Includes
# fixes accumulated since the prior pin: backward returning wrong number of gradients (#10),
# auto_cp UnboundLocalError (#8), and l2norm dtype preservation (#13). Strictly newer than
# v0.1.0 which shipped a chunk_gated_delta_rule wrapper that broke Qwen3.5 GatedDeltaNet
# training.
flash-qla = { git = "https://github.com/QwenLM/FlashQLA", rev = "6ef4858b5446e05bd461d9658d877e548182dbcb" }

# Download av wheels directly to avoid FFmpeg build dependency issues in CI.
# 3.11 uses av 14.4.0 (latest 14.x with cp311 wheel). 3.12 falls back to av 14.2.0 — the
# newest 14.x release with a cp312 wheel on pypi (14.3.0 and 14.4.0 are 3.11-only).
# Wheel URLs are x86_64 manylinux; the `npu_aarch64` extra deliberately omits av
# (no aarch64 wheel pinned) so it does not match these markers.
av = [
  { url = "https://files.pythonhosted.org/packages/f8/9a/8ffabfcafb42154b4b3a67d63f9b69e68fa8c34cb39ddd5cb813dd049ed4/av-14.4.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl", marker = "(extra == 'gpu' or extra == 'npu') and python_version == '3.11'" },
  { url = "https://files.pythonhosted.org/packages/ed/e8/cf60f3fcde3d0eedee3e9ff66b674a9b85bffc907dccebbc56fb5ac4a954/av-14.2.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl", marker = "(extra == 'gpu' or extra == 'npu') and python_version == '3.12'" },
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu/"
explicit = true

[[tool.uv.dependency-metadata]]
name = "flash-attn"
requires-dist = ["torch"]

[[tool.uv.dependency-metadata]]
name = "flash-attn-3"
requires-dist = ["torch"]

[tool.setuptools.dynamic]
version = {attr = "veomni._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
# ``patchgen-pkg*`` keeps the sibling patchgen project from being bundled into
# the veomni wheel — it ships separately. (The outer dir name carries the
# ``-pkg`` suffix so setuptools' namespace-package finder doesn't see it as a
# top-level ``patchgen`` package and shadow the editable install at dev time.)
exclude = ["tests*", "ci*", "configs*", "veomni_patch", "tasks", "scripts", "patchgen-pkg*"]

# VeOmni's own discovery config — used when running ``patchgen --check`` /
# ``patchgen --all`` from this repo. Downstream projects override it in
# their own pyproject.toml.
[tool.patchgen]
search_root = "veomni/models/transformers"
package_prefix = "veomni.models.transformers"
legacy_patches_prefix = "veomni.models.transformers.qwen3.patches"

[tool.ruff]
target-version = "py311"
line-length = 119
indent-width = 4

[tool.ruff.lint]
ignore = ["B905", "C901", "E501", "E741", "W605", "C408"]
select = ["B", "C", "E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
# Patch gen configs reference names from add_post_import_block (e.g. OpSlot
# instances, rotate_half) that ruff can't resolve because they only exist as
# string literals until patchgen materializes them into the generated file.
"veomni/models/transformers/**/generated/*.py" = ["E402", "B007"]
"veomni/models/transformers/**/*_patch_gen_config.py" = ["F821"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["veomni"]
known-third-party = ["torch", "transformers", "wandb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "benchmark: marks tests as benchmark tests (deselect with '-m \"not benchmark\"')",
    "qwen3_5_ulysses: Qwen3.5 GatedDeltaNet Ulysses SP tests (run when ulysses or qwen3_5 code is touched)",
]
